# tubearchive

./: .gitignore  Brewfile  CLAUDE.md  README.en.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  version-bump.yml
docs/: tui.en.md  tui.ja.md  tui.md
docs/design/: 2026-05-04-sprint1-pipeline-feedback-design.md
docs/plans/: 2026-05-04-sprint1-pipeline-feedback.md
scripts/: bump_version.py  hook-helpers.sh  install-hooks.sh  pre-commit  pre-push  repackage.py  tubearchive-finder.sh
tests/: conftest.py  test_cli.py  test_database.py  test_detector.py  test_e2e.py  test_effects.py  test_executor.py  test_merger.py  test_profiles.py  test_progress.py  test_resume.py  test_scanner.py  test_summary_generator.py  test_validators.py  test_youtube.py
tests/e2e/: conftest.py  test_archive.py  test_audio_processing.py  test_audio_validation.py  test_bgm.py  test_e2e.py  test_external_audio.py  test_hooks.py  test_lut.py  test_notification.py  test_pipeline_options.py  test_project.py  test_schedule_upload.py  test_silence.py  test_split.py  test_stabilize.py  test_thumbnail.py  test_timelapse.py
tests/unit/: test_archiver.py  test_audio_browser.py  test_audio_sync.py  test_bgm.py  test_catalog.py  test_cli.py  test_cli_wb_denoise.py  test_config.py  test_database.py  test_detector.py  test_effects.py  test_executor.py  test_file_progress_panel.py  test_fix_device_models.py  test_grouper.py  test_hooks.py  test_loudnorm_post_merge.py  test_lut.py  test_merger.py  test_migrate.py  test_notification.py  test_ordering.py  test_pipeline_context.py  test_pipeline_progress.py  test_profiles.py  test_progress.py  test_project.py  test_quality.py  test_resume.py  test_scanner.py  test_skip_transcoding.py  test_splitter.py  (+18 more)
tubearchive/: __init__.py  __main__.py  cli.py  config.py
(+104 files in other folders)
