[project]
name = "tubearchive"
version = "0.2.32"
description = "4K 영상 표준화 및 병합 CLI 도구 (Project Komorebi)"
authors = [
    {name = "Donggeun Lee", email = "i@dizy.me"}
]
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
]
readme = "README.md"

[project.scripts]
tubearchive = "tubearchive.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pip-audit>=2.7.0",
    "radon>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "PTH", "RUF"]
ignore = [
    "S603",  # subprocess 호출은 FFmpeg CLI 도구의 핵심 기능
    "S607",  # ffmpeg/ffprobe는 PATH에서 실행하는 것이 표준
    "S608",  # SQL은 파라미터 바인딩(?) 사용, placeholder 생성만 동적
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "S110"]  # assert, fixture token/secret, /tmp 경로, try-except-pass
"tubearchive/youtube/auth.py" = ["S105"]  # 환경변수명에 TOKEN 포함 (false positive)
"tubearchive/config.py" = ["S105"]  # 환경변수명에 TOKEN 포함 (false positive)

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=tubearchive --cov-report=term-missing"
